<resources>
    <string name="app_name">Aena EMMA</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_newSurvey">Nueva encuesta</string>
    <string name="surveyslist_language_text">Idioma</string>
    <string name="surveyslist_codEncuestador_text">Cod. de Encuestador</string>
    <string name="surveyslist_edit_codEncuestador_hint">XX</string>
    <string name="surveyslist_aeropuerto_text">Aeropuerto</string>
    <string name="surveyslist_edit_aeropuerto_hint">Aeropuerto</string>
    <string name="survey_sitemainformacion_text">Sistema de Información</string>
    <string name="survey_text_codencuestador">Código del Encuestador</string>
    <string name="survey_text_encuestasAeropuerto">Encuestas Aeropuerto de</string>
    <string name="survey_text_numEncuesta">Nº Encuesta</string>
    <string name="survey_text_fecha">FECHA</string>
    <string name="survey_text_hora">HORA</string>
    <string name="survey_text_numvuelo">Nº VUELO</string>
    <string name="survey_text_M1_P1">1. ¿Podría decirme cuál es su NACIONALIDAD?</string>
    <string name="survey_text_M1_P2">2. ¿En que PAÍS ha estado residiendo la mayor parte de los últimos 12 meses?</string>
    <string name="survey_text_M1_P2_prov">Provincia</string>
    <string name="survey_text_M1_P2_loc">Localidad</string>
    <string name="survey_text_M1_P3">3. Para coger este vuelo, ¿de dónde parte para acceder al Aeropuerto?</string>
    <string name="survey_radio_M1_P3_option1">Viene de su residencia</string>
    <string name="survey_radio_P3_option2">Localidad</string>
    <string name="survey_radio_P3_option3">Viene en conexión aérea</string>
    <string name="survey_text_P3b">Aeropuerto de origen</string>
    <string name="survey_text_P4">4. ¿Que tipo de alojamiento ha utilizado durante su estancia en %1$s?</string>
    <string name="survey_radio_P4_option1">Hotel o similar</string>
    <string name="survey_radio_P4_option2">Apartamento/Vivienda alquilada</string>
    <string name="survey_radio_P4_option3">Segunda residencia</string>
    <string name="survey_radio_P4_option4">Vivienda familiares/amigos</string>
    <string name="survey_radio_P4_option5">Lugar de trabajo/negocios</string>
    <string name="survey_radio_P4_option6">Crucero</string>
    <string name="survey_radio_P4_option7">Otros (Especificar)</string>
    <string name="survey_text_P5">5. ¿Podría indicarme el ÚLTIMO MODO DE TRANSPORTE que ha utilizado para ACCEDER al aeropuerto?</string>
    <string name="survey_text_P6">6. ¿Dónde ha dejado su vehículo?</string>
    <string name="survey_radio_P6_option1">En el PARKING de pago del aeropuerto (El tiempo que dura mi viaje)</string>
    <string name="survey_radio_P6_option2">En el PARKING de pago del aeropuerto (Mientras me despide mi acompañante)</string>
    <string name="survey_radio_P6_option3">En ZONA BAJADA/SUBIDA de pasajeros</string>
    <string name="survey_radio_P6_option4">NO SE ESTACIONA, se lo ha llevado un acompañante</string>
    <string name="survey_radio_P6_option5">En ZONA GRATUITA FUERA del aeropuerto</string>
    <string name="survey_text_P6b">6. ¿Por qué?</string>
    <string name="survey_radio_P6_option6">En PARKING DE PAGO fuera del aeropuerto</string>
    <string name="survey_text_P7">7. ¿Cuántas personas (amigos, familiares, compañeros, etc.) han venido a despedirle hasta el aeropuerto, y le han acompañado dentro del edificio o terminal?</string>
    <string name="survey_radio_P7_option1">Ninguna persona</string>
    <string name="survey_radio_P7_option2">1 persona</string>
    <string name="survey_radio_P7_option3">2 personas</string>
    <string name="survey_radio_P7_option4">Nº personas</string>
    <string name="survey_text_P8">8. ¿A qué HORA ha llegado al aeropuerto?</string>
    <string name="survey_text_P8_hora">Hora</string>
    <string name="survey_text_P8_minuto">Minuto</string>
    <string name="survey_text_P9">9. ¿A qué aeropuerto se dirige el vuelo en el que va a embarcar?</string>
    <string name="survey_text_P10">10. ¿Cuál es el número de vuelo?</string>
    <string name="survey_text_P11">11. ¿Viaja al aeropuerto %1$s sólo para hacer transbordo o finaliza allí su viaje vía aérea?</string>
    <string name="survey_radio_P11_option1">Finaliza</string>
    <string name="survey_radio_P11_option2">Trasbordo</string>
    <string name="survey_text_P12">12. ¿Compañia aérea con la que continua el viaje?</string>
    <string name="survey_text_P13">13. ¿En que aeropuerto finalizará su viaje en avión?</string>
    <string name="survey_text_P14">14. ¿Cuál es el PROPÓSITO PRINCIPAL de su viaje?</string>
    <string name="survey_text_P15">15. ¿Es este su viaje de IDA o de VUELTA?</string>
    <string name="survey_radio_P15_option1">Ida</string>
    <string name="survey_radio_P15_option2">Vuelta</string>
    <string name="survey_text_P15a">15a . ¿Cuánto tiempo estará fuera?</string>
    <string name="survey_text_P15b">15b. ¿Cuánto tiempo ha estado fuera?</string>
    <string name="survey_radio_P15b_option1">Regreso en el mismo día</string>
    <string name="survey_radio_P15b_option2">Nº de días</string>
    <string name="survey_text_P15_error">No es habitual que el viaje sea de IDA si el pasajero no viene de su residencia. \nEs necesario confirmar esta respuesta.</string>
    <string name="survey_text_P16">16. ¿Incluyéndose usted, cuántas personas viajan en su grupo inmediato?</string>
    <string name="survey_radio_P16_option1">Viaja solo</string>
    <string name="survey_radio_P16_option2">2 personas</string>
    <string name="survey_radio_P16_option3">Nº personas</string>
    <string name="survey_text_P17">17. ¿Cuántos de ellos son menores de 15 años?</string>
    <string name="survey_text_P18">18. ¿Podría indicarme la relación que existe entre los componentes de su grupo inmediato de viaje?</string>
    <string name="survey_radio_P18_option2">Parientes (abuelos, tíos, primos, etc.)</string>
    <string name="survey_radio_P18_option3">Amigos/Grupos de estudio</string>
    <string name="survey_radio_P18_option4">Compañeros de trabajo</string>
    <string name="survey_radio_P18_option5">Otros</string>
    <string name="survey_radio_P18_option1">Pareja/Cónyuge y/o hijos</string>
    <string name="survey_text_P19">19. Aproximadamente, ¿Cuánto tiempo hace que reservó su billete?</string>
    <string name="survey_radio_P19_option1">Hoy</string>
    <string name="survey_radio_P19_option2">Ayer</string>
    <string name="survey_radio_P19_option3">Nº de días</string>
    <string name="survey_text_P20">20. ¿Qué tipo de tarifa tiene el billete que va a utilizar?</string>
    <string name="survey_radio_P20_option1">Preferente/Bussines/First</string>
    <string name="survey_radio_P20_option2">Combinado (paquete)</string>
    <string name="survey_radio_P20_option3">Turista básica</string>
    <string name="survey_radio_P20_option5">Otras (free, etc.)</string>
    <string name="survey_radio_P20_option4">Turista con extras</string>
    <string name="survey_edit_P21">21. ¿Cuántos viajes en AVIÓN ha realizado en los últimos 12 MESES sin contar este? (1 viaje = Ida y vuelta)</string>
    <string name="survey_radio_P21_option1">Ninguno</string>
    <string name="survey_radio_P21_option2">Nº de viajes</string>
    <string name="survey_edit_P22">22. ¿Cuántas veces ha realizado la MISMA RUTA COMPLETA en los últimos 12 MESES sin contar con este?</string>
    <string name="survey_radio_P22_option1">Ninguno</string>
    <string name="survey_radio_P22_option2">Nº de viajes</string>
    <string name="survey_text_P23">23. ¿Ha facturado equipaje?</string>
    <string name="survey_radio_P23_option1">Si</string>
    <string name="survey_radio_P23_option2">No</string>
    <string name="survey_radio_P23b_option1">1 bulto</string>
    <string name="survey_radio_P23b_option2">2 bultos</string>
    <string name="survey_radio_P23b_option3">Nº de bultos</string>
    <string name="survey_edit_P24">24. ¿A cuántas personas pertenecen los bultos?</string>
    <string name="survey_radio_P24_option1">Una persona</string>
    <string name="survey_radio_P24_option2">Dos personas</string>
    <string name="survey_radio_P24_option3">Nº de personas</string>
    <string name="survey_edit_P25">25. ¿Dónde ha obtenido su tarjeta de embarque?</string>
    <string name="survey_text_P31">31. ¿En cuál de las situaciones laborales se encuentra usted actualmente?</string>
    <string name="survey_radio_P31_option1">Trabaja</string>
    <string name="survey_radio_P31_option2">Desempleado</string>
    <string name="survey_radio_P31_option3">Estudiante</string>
    <string name="survey_radio_P31_option4">Jubilado o pensionista</string>
    <string name="survey_radio_P31_option5">Ama de casa</string>
    <string name="survey_text_P32">32. Usted trabaja como...</string>
    <string name="survey_radio_P32_option1">Empresario o profesional con empleados</string>
    <string name="survey_radio_P32_option2">Profesional o trabajador autónomo</string>
    <string name="survey_radio_P32_option3">Asalariado fijo del sector público</string>
    <string name="survey_radio_P32_option4">Asalariado fijo del sector privado</string>
    <string name="survey_radio_P32_option5">Asalariado eventual o interino</string>
    <string name="survey_radio_P32_option6">Otra situación</string>
    <string name="survey_text_P33">33. ¿A qué actividad se dedica principalmente la empresa u organización donde usted trabaja?</string>
    <string name="survey_text_P33a">Si es otra actividad anotar cuál</string>
    <string name="survey_text_P34">34. ¿Podría decirme el nivel de estudios terminados?</string>
    <string name="survey_radio_P34_option1">Primarios/Básicos/EGB</string>
    <string name="survey_radio_P34_option2">Secundarios (ESO/BUP/Bachiller/FP Grado medio)</string>
    <string name="survey_radio_P34_option3">Superiores (Universitarios/Técnico Superior)</string>
    <string name="survey_text_P35">35. ¿A cuál de estos grupos de edad pertenece usted?</string>
    <string name="survey_radio_P35_option1">menor de 15 años</string>
    <string name="survey_radio_P35_option2">15 a 19 años</string>
    <string name="survey_radio_P35_option3">20 a 24 años</string>
    <string name="survey_radio_P35_option4">25 a 29 años</string>
    <string name="survey_radio_P35_option5">30 a 39 años</string>
    <string name="survey_radio_P35_option6">40 a 49 años</string>
    <string name="survey_radio_P35_option7">50 a 59 años</string>
    <string name="survey_radio_P35_option8">60 a 64 años</string>
    <string name="survey_radio_P35_option9">65 a 69 años</string>
    <string name="survey_radio_P35_option10">70 a 79 años</string>
    <string name="survey_radio_P35_option11">80 a 84 años</string>
    <string name="survey_radio_P35_option12">mayor de 85 años</string>
    <string name="survey_text_P36">36. Sexo</string>
    <string name="survey_radio_P36_option1">Hombre</string>
    <string name="survey_radio_P36_option2">Mujer</string>
    <string name="survey_text_M3_P36">36. ¿Por qué motivo no ha utilizado la conexión Wi-Fi gratuita del aeropuerto?</string>
    <string name="survey_radio_M3_P36_option1">Pensaba que la conexión Wifi era de pago</string>
    <string name="survey_radio_M3_P36_option2">Complejidad en el acceso</string>
    <string name="survey_radio_M3_P36_option3">Calidad de la conexión</string>
    <string name="survey_radio_M3_P36_option4">Prefiero utilizar mi tarifa de datos</string>
    <string name="survey_radio_M3_P36_option5">No necesito conectarme</string>
    <string name="survey_radio_M3_P36_option6">Otros</string>
    <string name="survey_text_M3_P34">34. ¿Conoce la existencia de Wi-Fi gratuito en el aeropuerto?</string>
    <string name="survey_radio_M3_P34_option1">Sí</string>
    <string name="survey_radio_M3_P34_option2">No</string>
    <string name="survey_text_M3_P35">35. ¿Lo ha utilizado en alguna ocasión?</string>
</resources>